// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots LinkList authenticated 1`] = `
.c0 {
  color: #22BAD9;
  font-size: 14px;
  margin-right: 15px;
  text-decoration: none;
  cursor: pointer;
  text-decoration: underline;
}

.c1 {
  color: #22BAD9;
  font-size: 14px;
  margin-right: 15px;
  text-decoration: none;
  cursor: pointer;
  text-decoration: none;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #22BAD9;
  border: 0;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 5px;
  display: inline-block;
  margin-right: 15px;
  cursor: pointer;
  text-decoration: none;
}

.c2:active {
  background-color: hsl(190.20000000000005,72.9%,39.4%);
  -webkit-transition: background-color 0.3s;
  transition: background-color 0.3s;
}

.c2:focus {
  outline: none;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "justifyContent": "center",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <nav>
      <a
        className="c0"
        href="/"
        onClick={[Function]}
      >
        Main Page
      </a>
      <a
        className="c1"
        href="/create_post"
        onClick={[Function]}
      >
        Create
      </a>
      <button
        className="c2"
        href="#"
        onClick={[Function]}
        role="link"
      >
        LogOut
      </button>
      <a
        className="c1"
        href="https://github.com/Sly777/ran"
        rel="noopener noreferrer"
        target="_blank"
      >
        RAN! @ Github
      </a>
    </nav>
  </div>
</div>
`;

exports[`Storyshots LinkList nonauthenticated 1`] = `
.c0 {
  color: #22BAD9;
  font-size: 14px;
  margin-right: 15px;
  text-decoration: none;
  cursor: pointer;
  text-decoration: underline;
}

.c1 {
  color: #22BAD9;
  font-size: 14px;
  margin-right: 15px;
  text-decoration: none;
  cursor: pointer;
  text-decoration: none;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "justifyContent": "center",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <nav>
      <a
        className="c0"
        href="/"
        onClick={[Function]}
      >
        Main Page
      </a>
      <a
        className="c1"
        href="/create_post"
        onClick={[Function]}
      >
        Create
      </a>
      <a
        className="c1"
        href="/sign_in"
        onClick={[Function]}
      >
        SignIn
      </a>
      <a
        className="c1"
        href="/sign_up"
        onClick={[Function]}
      >
        SignUp
      </a>
      <a
        className="c1"
        href="https://github.com/Sly777/ran"
        rel="noopener noreferrer"
        target="_blank"
      >
        RAN! @ Github
      </a>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Logo default 1`] = `
.c0 {
  position: absolute;
  top: 30px;
  right: 30px;
}

<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "justifyContent": "center",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <img
      alt="logo"
      className="c0"
      onClick={[Function]}
      src="/static/logo.png"
    />
  </div>
</div>
`;
